# android_kernel_xiaomi_marble

./: .gitignore  Android.bp  Android.mk  KMI_function_symbols_test.py  Kbuild  Kconfig  MAINTAINERS  Makefile  Makefile.am  README.txt  VERSION.txt  audio_kernel_product_board.mk  audio_kernel_vendor_board.mk  build.config.sxr.common  cvp_kernel_board.mk  cvp_kernel_product.mk  dataipa_dlkm_vendor_board.mk  dataipa_dlkm_vendor_product.mk  datarmnet_dlkm_vendor_board.mk  datarmnet_dlkm_vendor_product.mk  datarmnet_ext_dlkm_vendor_board.mk  datarmnet_ext_dlkm_vendor_product.mk  disp.c  display_driver_board.mk  display_kernel_headers.py  eva_kernel_board.mk  eva_kernel_product.mk  mmrm_kernel_board.mk  mmrm_kernel_product.mk  readme.txt  test.c  video_kernel_board.mk  video_kernel_headers.py  video_kernel_product.mk  wlan_qcacld3_modules.bzl  wmi_tlv_helper.c  wmi_tlv_platform.c  wmi_unified.c  wmi_unified_action_oui_tlv.c  wmi_unified_ap_api.c  (+47 more)
core/: Android.mk  Kbuild  Kconfig  Makefile  Makefile.am  dfc.h  dfc_defs.h  dfc_qmap.c  dfc_qmi.c  qmi_rmnet.c  qmi_rmnet.h  qmi_rmnet_i.h  rmnet_config.c  rmnet_config.h  rmnet_ctl.h  rmnet_ctl_client.c  rmnet_ctl_client.h  rmnet_ctl_ipa.c  rmnet_ctl_mhi.c  rmnet_descriptor.c  rmnet_descriptor.h  rmnet_genl.c  rmnet_handlers.c  rmnet_handlers.h  rmnet_hook.h  rmnet_ll.c  rmnet_ll.h  rmnet_ll_ipa.c  rmnet_ll_qmap.c  rmnet_map.h  rmnet_map_command.c  rmnet_map_data.c  rmnet_private.h  rmnet_qmap.c  rmnet_qmap.h  rmnet_qmi.h  rmnet_trace.h  rmnet_vnd.c  rmnet_vnd.h  wda.h  (+1 more)
core/bmi/inc/: bmi.h  ol_fw.h  ol_if_athvar.h
core/bmi/src/: bmi.c  bmi_1.c  bmi_2.c  i_ar6320v2_regtable.h  i_bmi.h  ol_fw.c  ol_fw_common.c
core/cdf/inc/: cdf_atomic.h  cdf_defer.h  cdf_event.h  cdf_list.h  cdf_lock.h  cdf_mc_timer.h  cdf_memory.h  cdf_nbuf.h  cdf_net_types.h  cdf_status.h  cdf_time.h  cdf_trace.h  cdf_types.h  cdf_util.h  osdep.h
core/cdf/src/: cdf_event.c  cdf_list.c  cdf_lock.c  cdf_mc_timer.c  cdf_memory.c  cdf_nbuf.c  cdf_trace.c  i_cdf_atomic.h  i_cdf_defer.h  i_cdf_event.h  i_cdf_lock.h  i_cdf_mc_timer.h  i_cdf_nbuf.h  i_cdf_softirq_timer.h  i_cdf_trace.h  i_cdf_types.h  i_cdf_util.h
core/cds/inc/: cds_api.h  cds_concurrency.h  cds_concurrency_1x1_dbs.h  cds_concurrency_2x2_dbs.h  cds_concurrency_no_dbs.h  cds_config.h  cds_crypto.h  cds_get_bin.h  cds_ieee80211_common.h  cds_ieee80211_defines.h  cds_if_upperproto.h  cds_mc_timer.h  cds_mq.h  cds_pack_align.h  cds_packet.h  cds_queue.h  cds_reg_service.h  cds_regdomain.h  cds_regdomain_common.h  cds_sched.h  cds_utils.h
core/cds/src/: cds_api.c  cds_concurrency.c  cds_get_bin.c  cds_ieee80211_common_i.h  cds_mc_timer.c  cds_mq.c  cds_packet.c  cds_reg_service.c  cds_regdomain.c  cds_sched.c  cds_utils.c  i_cds_packet.h
core/dp/htt/: htt.c  htt_fw_stats.c  htt_h2t.c  htt_internal.h  htt_monitor_rx.c  htt_rx.c  htt_rx_hl.c  htt_rx_ll.c  htt_t2h.c  htt_tx.c  htt_types.h  rx_desc.h
core/dp/txrx/: ipv6_defs.h  ol_cfg.c  ol_ctrl_txrx_api.h  ol_osif_txrx_api.h  ol_rx.c  ol_rx.h  ol_rx_defrag.c  ol_rx_defrag.h  ol_rx_fwd.c  ol_rx_fwd.h  ol_rx_pn.c  ol_rx_pn.h  ol_rx_reorder.c  ol_rx_reorder.h  ol_rx_reorder_timeout.c  ol_rx_reorder_timeout.h  (+32 more)
core/htc/: htc.c  htc_api.h  htc_internal.h  htc_packet.h  htc_recv.c  htc_send.c  htc_services.c
core/inc/: nan_public_structs.h  wlan_nan_api.h  wlan_p2p_main.h  wlan_p2p_roc.h
core/src/: nan_api.c  nan_main.c  nan_main_i.h  nan_utils.c  wlan_p2p_main.c  wlan_p2p_main.h  wlan_p2p_off_chan_tx.c  wlan_p2p_off_chan_tx.h  wlan_p2p_roc.c  wlan_p2p_roc.h  wlan_tdls_cmds_process.c  wlan_tdls_cmds_process.h  wlan_tdls_ct.c  wlan_tdls_ct.h  wlan_tdls_main.c  wlan_tdls_main.h  wlan_tdls_mgmt.c  wlan_tdls_mgmt.h  wlan_tdls_peer.c  wlan_tdls_peer.h
core/wmi/: wmi_tlv_helper.c  wmi_tlv_platform.c  wmi_unified.c  wmi_unified_api.h  wmi_unified_priv.h
include/: configure.ac
include/asm-generic/: qrwlock.h
include/asoc/: core.h  cpe_core.h  msm-cdc-pinctrl.h  msm-cdc-supply.h  pdata.h  wcd-clsh.h  wcd-irq.h  wcd-mbhc-v2.h  wcd9320_registers.h  wcd934x_registers.h  wcd9xxx-resmgr-v2.h  wcd9xxx_registers.h  wcdcal-hwdep.h
include/dsp/: apr_audio-v2.h  audio_cal_utils.h  audio_calibration.h  audio_notifier.h  audio_prm.h  digital-cdc-rsc-mgr.h  gecko-core.h  msm-audio-effects-q6-v2.h  msm-audio-event-notify.h  msm-dts-srs-tm-config.h  msm_audio_ion.h  msm_mdf.h  q6adm-v2.h  q6afe-v2.h  q6asm-v2.h  q6audio-v2.h  q6common.h  q6core.h  q6lsm.h  q6voice.h  rtac.h
include/ipc/: apr.h  apr_tal.h  apr_us.h  gpr-lite.h
include/linux/: Kbuild  binfmts.h  bio.h  bvec.h  cgroup-defs.h  cpumask.h  damon.h  fs.h  highmem.h  hwkm.h  interrupt.h  irq.h  kernel.h  kthread.h  lz4.h  memcontrol.h  mhi.h  mm.h  mm_inline.h  mm_types.h  mmzone.h  msm-geni-se.h  msm_hdcp.h  msm_pcie.h  of.h  page-flags.h  panic_logstore.h  pci_ids.h  pgtable.h  property.h  qcom_scm.h  rcupdate.h  rwlock.h  rwlock_api_smp.h  sched.h  sde_io_util.h  sde_rsc.h  sde_vm_event.h  skbuff.h  swap.h  (+4 more)
include/misc/: qseecom_kernel.h
include/net/: flow.h  inet_connection_sock.h  ip_tunnels.h  sch_generic.h  sock.h  tcp.h
include/soc/: internal.h  snd_event.h  soundwire.h  swr-common.h  swr-wcd.h  wcd-spi-ac.h
include/uapi/: Android.mk
kernel-tests/: Constants.h  DataPathTests.cpp  ExceptionTests.cpp  ExceptionsTestFixture.h  ExceptionsTests.cpp  Filtering.cpp  Filtering.h  FilteringTest.cpp  HeaderInsertion.cpp  HeaderInsertion.h  HeaderInsertionTests.cpp  HeaderProcessingContextTestFixture.cpp  HeaderProcessingContextTestFixture.h  HeaderProcessingContextTests.cpp  HeaderRemovalTestFixture.h  IPAFilteringTable.cpp  IPAFilteringTable.h  IPAInterruptsTestFixture.cpp  IPv6CTTest.cpp  InterfaceAbstraction.cpp  InterfaceAbstraction.h  MBIMAggregationTests.cpp  Makefile.am  PipeTestFixture.cpp  RNDISAggregationTestFixture.h  RoutingTests.cpp  TLPAggregationTestFixture.h  TestBase.cpp  TestBase.h  TestManager.cpp  TestManager.h  TestsUtils.cpp  TestsUtils.h  UlsoTestFixture.h  configure.ac  main.cpp  run.sh
kernel-tests/network_traffic/: Header.h  IPv4Header.h  TcpHeader.h  UlsoPacket.h  main.cpp
(+8124 files in other folders)
