# SPDX-License-Identifier: GPL-2.0-only

ACLOCAL_AMFLAGS = -I m4
HEADER_PATH = ${srcdir}/uapi/display

drm_h_sources = $(HEADER_PATH)/drm/*.h
drm_includedir = $(includedir)/display/drm
drm_include_HEADERS = $(drm_h_sources)

hdcp_h_sources = $(HEADER_PATH)/hdcp/*.h
hdcp_includedir = $(includedir)/display/hdcp
hdcp_include_HEADERS = $(hdcp_h_sources)

media_h_sources = $(HEADER_PATH)/media/*.h
media_includedir = $(includedir)/display/media
media_include_HEADERS = $(media_h_sources)
